little fix (overflow hidden in nav)

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -234,7 +234,6 @@ padding: 3px 0;
     }
 
     .desktop_nav{
-        overflow: hidden;
         display: flex;
         align-items: center;
         justify-content: space-between;
